--- a/Fomulário/index.html
+++ b/Fomulário/index.html
@@ -9,8 +9,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;1,200;1,300&family=Open+Sans:wght@300;500;600&display=swap"
         rel="stylesheet">
+        <link rel="shortcut icon" href="https://a-us.storyblok.com/f/1006947/x/e39e2f116a/favicon.ico" type="image/x-icon">
 
-    <title>Assinatura custom</title>
+    <title>Apis3/Assinatura</title>
+    
 </head>
 
 <body>
