--- a/Fomulário/index.html
+++ b/Fomulário/index.html
@@ -36,7 +36,7 @@
 
 
                 <div class="campo">
-                    <label for="setor">Qual o seu setor?</label>
+                    <label for="setor"><strong>Qual o seu setor?</strong></label>
                     <select id="setor">
 
                         <option selected disabled value="">Selecione</option>
