--- a/Fomulário/index.html
+++ b/Fomulário/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-    <link
+    <!-- <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;1,200;1,300&family=Open+Sans:wght@300;500;600&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
         <link rel="shortcut icon" href="https://a-us.storyblok.com/f/1006947/x/e39e2f116a/favicon.ico" type="image/x-icon">
 
     <title>Apis3/Assinatura</title>
@@ -52,11 +52,15 @@
 
             </fieldset>
         </form>
-        <div class="botao">
-            <button type="submit" class="btn" onclick="submitForm()">Gerar</button>
+        <div class="div-botao-form">
+            <button type="submit" class="btn-form" onclick="submitForm()">Gerar</button>
         </div>
 
         <div id="resultado"></div>
+        
+        <div class="div-botao-copiar">
+            <button type="submit" id="btn-copiar-assinatura" class="btn-copiar-assinatura" onclick="CopiarAssinatura()">Copiar</button>
+        </div>
     </div>
 </body>
 
