att, alteracao celular

--- a/formulario/index.html
+++ b/formulario/index.html
@@ -53,23 +53,23 @@
                         <option value="admiministrativo">Admiministrativo</option>
                         <option value="design">Design</option>
                         <option value="analista">Analista de dados</option>
-                        <option value="seo">SEO</option>
+                        <option value="seo">Otimização Orgânica</option>
 
                     </select>
 
                 </div>
 
 
-                <div class="campo setor-adicional">
+                <div class="campo setor setor-adicional">
                     <label for="setor"><strong>Setor adicional</strong></label>
-                    <select id="setor">
+                    <select id="setor-ad">
 
                         <option selected disabled value="">Selecione</option>
                         <option value="desenvolvimento">Desenvolvimento</option>
                         <option value="admiministrativo">Admiministrativo</option>
                         <option value="design">Design</option>
                         <option value="analista">Analista de dados</option>
-                        <option value="seo">SEO</option>
+                        <option value="seo">Otimização Orgânica</option>
 
                     </select>
 
