--- a/formulario/index.html
+++ b/formulario/index.html
@@ -60,7 +60,7 @@
                 </div>
 
 
-                <div class="campo setor setor-adicional">
+                <div class="campo setor ad">
                     <label for="setor"><strong>Setor adicional</strong></label>
                     <select id="setor-ad">
 
@@ -69,7 +69,7 @@
                         <option value="admiministrativo">Admiministrativo</option>
                         <option value="design">Design</option>
                         <option value="analista">Analista de dados</option>
-                        <option value="seo">Otimização Orgânica</option>
+                        <option value="Otimização-Orgânica">Otimização Orgânica</option>
 
                     </select>
 
