--- a/formulario/index.html
+++ b/formulario/index.html
@@ -9,6 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile.css">
     <script src="js/script.js" defer></script>
@@ -32,20 +38,36 @@
         <main>
             <form>
                 <fieldset class="grupo">
-                    <div class="camponome">
+                    <div class="campo-nome">
                         <label for="nome">Nome:</label>
                         <input type="text" name="name" id="name" placeholder="Digite seu Nome" required>
                     </div>
-                    <div class="camposobrenome">
+                    <div class="campo-sobrenome">
                         <label for="sobrenome">Sobrenome:</label>
                         <input type="text" name="Sobrenome" id="sobrenome" placeholder="Digite seu Sobrenome">
                     </div>
 
                 </fieldset>
 
-                <div class="campocelular">
+                <div class="campo-celular">
                     <label for="telefone">Celular:</label>
                     <input type="tel" name="telefone" id="telefone" placeholder="Opicional">
+                </div>
+
+                <div class="campo setor-Primario">
+                    <label for="setor">Qual o seu setor?</label>
+                    <select id="setor">
+
+                        <option selected disabled value="">Selecione</option>
+                        <option value="desenvolvimento">Desenvolvimento</option>
+                        <option value="admiministrativo">Admiministrativo</option>
+                        <option value="design">Design</option>
+                        <option value="analista">Analista de dados</option>
+                        <option value="otimização-orgânica">Otimização Orgânica</option>
+                        <option value="dados">Dados</option>
+
+                    </select>
+
                 </div>
 
                 <div class="campo setor-Secundario">
@@ -66,22 +88,8 @@
 
 
 
-                <div class="campo setor-Primario">
-                    <label for="setor">Qual o seu setor?</label>
-                    <select  id="setor">
 
-                        <option selected disabled value="">Selecione</option>
-                        <option value="desenvolvimento">Desenvolvimento</option>
-                        <option value="admiministrativo">Admiministrativo</option>
-                        <option value="design">Design</option>
-                        <option value="analista">Analista de dados</option>
-                        <option value="otimização-orgânica">Otimização Orgânica</option>
-                        <option value="dados">Dados</option>
 
-                    </select>
-
-                </div>
-               
 
             </form>
             <div class="div-botao-form">
