--- a/formulario/index.html
+++ b/formulario/index.html
@@ -49,6 +49,11 @@
 
                 </fieldset>
 
+                <div class="campo-agenda">
+                    <label for="agenda">Agenda:</label>
+                    <input type="url" name="agenda" id="agenda" placeholder="Cole o link aqui">
+                </div>
+
                 <div class="campo-celular">
                     <label for="telefone">Celular:</label>
                     <input type="tel" name="telefone" id="telefone" placeholder="Opicional">
@@ -63,7 +68,7 @@
                         <option value="admiministrativo">Admiministrativo</option>
                         <option value="design">Design</option>
                         <option value="analista">Analista de dados</option>
-                        <option value="otimização-orgânica">Otimização Orgânica</option>
+                        <option value="otimização orgânica">Otimização Orgânica</option>
                         <option value="dados">Dados</option>
 
                     </select>
@@ -79,7 +84,7 @@
                         <option value="admiministrativo">Admiministrativo</option>
                         <option value="design">Design</option>
                         <option value="analista">Analista de dados</option>
-                        <option value="otimização-orgânica">Otimização Orgânica</option>
+                        <option value="otimização orgânica">Otimização Orgânica</option>
                         <option value="dados">Dados</option>
 
                     </select>
@@ -101,6 +106,13 @@
             <div class="div-botao-copiar">
                 <button type="submit" id="btn-copiar-assinatura" class="btn-copiar-assinatura"
                     onclick="CopiarAssinatura()">Copiar</button>
+
+                <div class="encaminhar" >
+                    <button type="button" class="btn-copiar-assinatura" id="btn-email"><a href="https://mail.google.com/mail/u/0/#inbox"
+                            target="_blank">Ir para o Gmail</button></a>
+                </div>
+            </div>
+
         </main>
     </div>
 </body>
